--- a/Solution.Host/appsettings.json
+++ b/Solution.Host/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "DatabaseMsSql": "Server=YOUR_SERVER_NAME;Database=YOUR_DATABASE_NAME;User Id=YOUR_USERNAME;Password=YOUR_PASSWORD;"
+    "DatabaseMsSql": "Server=localhost,1433;Database=master;User Id=sa;Password=YourStrongPassword!;TrustServerCertificate=True;"
   },
+
+  "SecretKey": "ДенисДенисДенисДенисДенисДенисДенисДенисДенисДенисДенисДенис",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
